idf_component_register(SRCS "locker.c" "main.c" 
                    "functions.c" "sntp.c" "smartconfig.c" 
                    "blufi_example.c"
                    "blufi_security.c"
                    "blufi_init.c"
                    "otp.cpp"
                    "otp_key.cpp"
                    "keydata.c"
                    INCLUDE_DIRS ".")