idf_component_register(SRCS "locker.c" "main.c" 
                    "functions.c" "sntp.c" "smartconfig.c" 
                    "blufi_example.c"
                    "blufi_security.c"
                    "blufi_init.c"
                    "otp_key.cpp"
                    "totp.cpp"
                    "totp.c"
                    "keydata.c"
                    "sha1.c"
                    INCLUDE_DIRS ".")